Added test folders to `autoload-dev`

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,12 @@
             "RebelCode\\Sessions\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "RebelCode\\Sessions\\UnitTest\\": "test/unit",
+            "RebelCode\\Sessions\\FuncTest\\": "test/functional"
+        }
+    },
     "scripts": {
         "test": "phpunit",
         "csfix": "php-cs-fixer fix -vvv"
